<resources>
    <string name="app_name">Learning</string>
    <string name="learning">LEARNING</string>
    <string name="learn">Learn</string>
    <string name="coding_basics_right_at_your_fingertips">Coding basics right at your fingertips</string>
    <string name="play">Play</string>
    <string name="challenge_peers_and_complete_in_interactive_code_battles">Challenge peers and complete in interactive code battles</string>
    <string name="code">Code</string>
    <string name="write_and_run_code_right_on_your_mobile_with_our_code_playground">Write and run code right on your mobile with our Code Playground</string>
    <string name="discuss">Discuss</string>
    <string name="ask_questions_and_give_answers_in_our_q_amp_a_discussion_forums"><![CDATA[Ask questions and give answers in our Q&A Discussion Forums]]></string>
    <string name="your_profile">Your Profile</string>
    <string name="build_and_showcase_your_unique_coder_profile_on_learning">Build and showcase your unique coder profile on LEARNING!</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="create_account">CREATE ACCOUNT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="quiz_factory">Quiz Factory</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="user_profile">User Profile</string>
    <string name="notifications">Notifications</string>
    <string name="learning_is_more_fun_with_friends">LEARNING is more fun with friends!</string>
    <string name="share">Share</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="discover_peers">Discover Peers</string>
</resources>
