<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_leaderboard"
        android:title="@string/leaderboard"
        app:showAsAction="never"/>

    <item
        android:id="@+id/main_invite_friends"
        android:title="@string/invite_friends"
        app:showAsAction="never" />

    <item android:id="@+id/main_quiz_factory"
        android:title="@string/quiz_factory"
        app:showAsAction="never" />

    <item android:id="@+id/main_rate"
        android:title="@string/rate"
        app:showAsAction="never" />

    <item android:id="@+id/main_feedback"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item android:id="@+id/main_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_logout"
        android:title="@string/log_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_user_profile"
        android:title="@string/user_profile"
        android:icon="@drawable/person"
        app:showAsAction="always"/>

    <item
        android:id="@+id/main_notification"
        android:title="@string/notifications"
        android:icon="@drawable/notification"
        app:showAsAction="always" />
</menu>