<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/learning"
            android:textSize="35sp"
            android:textColor="@color/dotLightScreen"
            android:fontFamily="casual"
            android:textStyle="bold|italic"/>

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="15dp"
            android:src="@drawable/learn"
            android:padding="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/learn"
            android:textColor="@color/dotLightScreen"
            android:textSize="40sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coding_basics_right_at_your_fingertips"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/dotLightScreen"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>